fix: theme alignment for about page with some styling changes and improved compatibility

--- a/src/app/styles/styles.module.css
+++ b/src/app/styles/styles.module.css
@@ -99,7 +99,7 @@
     object-fit: cover;
 }
 
-.eboardPage,
+/* .eboardPage, */
 .companyLogosPage {
     background-color: white;
     height: 100%;
@@ -196,20 +196,12 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   }
-  .aboutStructure {
+  /* .aboutStructure {
     display: flex;
     flex-direction: column;
     background-color: #C12222;
-  }
-  .aboutStatistics {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between; /* Creates space between the sections */
-    align-items: stretch; /* Ensures all sections have the same height */
-    gap: 10px; /* Adds space between sections */
-    padding: 10px;
-    margin-bottom: 2%;
-  }
+  } */
+
   .aboutStatisticsSection {
     flex: 1; /* Ensures each section has equal width */
     padding: 10px;
